# clash-verge-rev

./: .gitignore  AGENTS.md  BUILD_GUIDE.md  CLAUDE.md  Changelog.md  TROUBLESHOOTING.md  build-local-windows.bat  build-optimized.bat  build-windows.yml  eslint.config.ts  fix-sidecar-names.bat  myapp.key  myapp.key.pub  package.json  pnpm-lock.yaml  setup-environment.bat  verify-config.bat
.claude/: settings.local.json
.github/workflows/: build-unsigned.yml  personal-release.yml  release-unsigned.yml  release-windows.yml  windows.yml
.kiro/steering/: product.md  structure.md  tech.md
crates/tauri-plugin-mihomo/: .gitignore  Cargo.toml  README.md  build.rs  package.json
crates/tauri-plugin-mihomo/.cargo/: config.toml
crates/tauri-plugin-mihomo/.github/workflows/: build-dist-js.yaml  clippy.yaml
crates/tauri-plugin-mihomo/dist-js/: index.cjs  index.d.ts  index.js
crates/tauri-plugin-mihomo/dist-js/bindings/: ProxyType.d.ts
crates/tauri-plugin-mihomo/guest-js/: index.ts
crates/tauri-plugin-mihomo/guest-js/bindings/: ProxyType.ts
crates/tauri-plugin-mihomo/permissions/: default.toml
crates/tauri-plugin-mihomo/src/: commands.rs  error.rs  ipc.rs  lib.rs  mihomo.rs  models.rs  utils.rs
crates/tauri-plugin-mihomo/tests/: group_test.rs  proxy_test.rs  websocket_test.rs
crates/tauri-plugin-mihomo/tests/common/: mod.rs
docs/: smart-core-implementation.md
scripts/: portable-fixed-webview2.mjs  portable-local.mjs  portable.mjs  prebuild.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/src/cmd/: profile.rs
src-tauri/src/config/: clash.rs  config.rs  verge.rs
src-tauri/src/core/: clash_api.rs  core.rs  validate.rs
src-tauri/src/enhance/: chain.rs  mod.rs
src-tauri/src/feat/: config.rs
src-tauri/src/utils/: resolve.rs
src/components/connection/: connection-detail.tsx  connection-item.tsx  connection-table.tsx
src/components/home/: current-proxy-card.tsx  test-card.tsx
src/components/layout/: layout-traffic.tsx  traffic-graph.tsx
src/components/profile/: editor-viewer.tsx  groups-editor-viewer.tsx  profile-item.tsx  profile-more.tsx  profile-viewer.tsx  proxies-editor-viewer.tsx  rules-editor-viewer.tsx
src/components/proxy/: proxy-groups.tsx  proxy-head.tsx  proxy-item-mini.tsx  proxy-item.tsx  (+5 more)
src/hooks/: use-connection-data.ts  use-mihomo-ws-subscription.ts  use-profiles.ts  use-proxy-selection.ts  use-traffic-data.ts
src/pages/: _layout.tsx  _routers.tsx  connections.tsx  logs.tsx  profiles.tsx  proxies.tsx  rules.tsx
src/providers/: app-data-provider.tsx
src/services/: api.ts  cmds.ts  delay.ts  types.d.ts
src/types/: global.d.ts
src/utils/: parse-traffic.ts  traffic-diagnostics.ts  uri-parser.ts
(+65 files in other folders)
