[package]
name = "tauri-plugin-mihomo"
version = "0.1.3"
authors = ["oomeow"]
description = "Tauri plugin for invoke Mihomo API"
edition = "2024"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-mihomo"

[dependencies]
tauri = { version = "2" }
thiserror = "2"
reqwest = { version = "0.13", features = ["json", "query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio = { version = "1", default-features = false, features = [
    "net",
    "sync",
    "macros",
] }
tokio-tungstenite = "0.28"
rand = "0.9"
http = "1.3"
base64 = "0.22"
httparse = "1.10"
log = "0.4"
urlencoding = "2.1"
ts-rs = "11.0"
pin-project = "1.1"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.61"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dev-dependencies]
dotenvy = "=0.15.7"

[lints.clippy]
# Core categories - most important for code safety and correctness
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Critical safety lints - warn for now due to extensive existing usage
unwrap_used = "warn"
expect_used = "warn"
panic = "deny"
unimplemented = "deny"

# Development quality lints
todo = "warn"
dbg_macro = "warn"
#print_stdout = "warn"
#print_stderr = "warn"

# Performance lints for proxy application
clone_on_ref_ptr = "warn"
rc_clone_in_vec_init = "warn"
large_stack_arrays = "warn"
large_const_arrays = "warn"

# Security lints
#integer_division = "warn"
#lossy_float_literal = "warn"
#default_numeric_fallback = "warn"

# Mutex and async lints - strict control
async_yields_async = "deny" # Prevents missing await in async blocks
mutex_atomic = "deny"       # Use atomics instead of Mutex<bool/int>
mutex_integer = "deny"      # Use AtomicInt instead of Mutex<int>
rc_mutex = "deny"           # Single-threaded Rc with Mutex is wrong
unused_async = "deny"       # Too many false positives in Tauri/framework code
await_holding_lock = "deny"
large_futures = "deny"
future_not_send = "deny"

# Common style improvements
redundant_else = "deny"             # Too many in existing code
needless_continue = "deny"          # Too many in existing code
needless_raw_string_hashes = "deny" # Too many in existing code

# Disable noisy categories for existing codebase but keep them available
#style = { level = "allow", priority = -1 }
#complexity = { level = "allow", priority = -1 }
#perf = { level = "allow", priority = -1 }
#pedantic = { level = "allow", priority = -1 }
#nursery = { level = "allow", priority = -1 }
#restriction = { level = "allow", priority = -1 }
